# barnacle

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  coverage.yaml  rust.yml
barnacle-app/: Cargo.toml
barnacle-app/src/: database.rs  gui.rs  lib.rs  main.rs  state.rs
barnacle-app/src/deployers/: mod.rs
barnacle-app/src/domain/v1/: games.rs  mods.rs  profiles.rs
barnacle-app/src/managers/: games.rs  mods.rs  profiles.rs
barnacle-app/ui/: main.slint
barnacle-data/: Cargo.toml  README.md
barnacle-data/src/: db.rs  games.rs  lib.rs  mods.rs  profiles.rs
barnacle-data/src/db/: games.rs  mod.rs  mods.rs  profiles.rs
barnacle-data/src/schema/v1/: games.rs  mods.rs  profiles.rs
barnacle-data/src/v1/: db.rs  games.rs  mod.rs  mods.rs  profiles.rs
barnacle-db/: Cargo.toml  README.md
barnacle-db/src/: lib.rs
barnacle-db/src/db/: games.rs  mod.rs  mods.rs  profiles.rs  tools.rs
barnacle-db/src/models/: mod.rs
barnacle-db/src/models/v1/: games.rs  mods.rs  profiles.rs  tools.rs
barnacle-gui/: Cargo.toml  build.rs
barnacle-gui/src/: ;  config.rs  icons.rs  lib.rs  library_manager.rs  main.rs  mod_list.rs  mod_manager.rs
barnacle-gui/src/components/: mod.rs  mod_list.rs
barnacle-gui/src/components/library_manager/: games_tab.rs  mod.rs
barnacle-gui/src/components/library_manager/games_tab/: edit_dialog.rs  mod.rs  new_dialog.rs
barnacle-gui/src/components/library_manager/profiles_tab/: edit_dialog.rs  mod.rs  new_dialog.rs
barnacle-gui/src/config/: mod.rs  theme.rs
barnacle-gui/src/library_manager/: games_tab.rs  mod.rs  mods_tab.rs  profiles_tab.rs  tools_tab.rs
barnacle-gui/ui/: library_manager.slint  main.slint  mod_table_view.slint
barnacle-lib/: Cargo.toml
barnacle-lib/src/: config.rs  fs.rs  lib.rs
barnacle-lib/src/db/: games.rs  mod.rs  mods.rs  profiles.rs  tools.rs
barnacle-lib/src/deployers/: generic.rs  overlay.rs
barnacle-lib/src/repository/: config.rs  db.rs  games.rs  mod.rs  mods.rs  profiles.rs  tools.rs
barnacle-lib/src/repository/config/: core.rs  mod.rs
barnacle-lib/src/repository/config/gui/: mod.rs  theme.rs
barnacle-lib/src/repository/db/: games.rs  mod.rs  mods.rs  profiles.rs  tools.rs
barnacle-lib/src/repository/entities/: game.rs  games.rs  mod.rs  mod_.rs  mod_entry.rs  mods.rs  profile.rs  profiles.rs  tool.rs
barnacle-lib/src/repository/models/: mod.rs
barnacle-lib/src/repository/models/v1/: games.rs  mod.rs  mod_entries.rs  mods.rs  profiles.rs  tools.rs
barnacle-lib/src/repository/old/: mods.rs  profiles.rs  tools.rs
barnacle-lib/src/state/: games.rs  mod.rs  mods.rs  profiles.rs  tools.rs
src/: config.rs  games.rs  gui.rs  import.rs  lib.rs  main.rs  mods.rs  overlay.rs  profiles.rs  state.rs  state_file.rs
src/data/: games.rs  mods.rs  profiles.rs
src/data/v1/: games.rs  mods.rs  profiles.rs
src/deployers/: generic.rs  mod.rs  overlay.rs
src/domain/: mod.rs
src/domain/v1/: games.rs  mods.rs  profiles.rs
src/infra/repos/: games.rs  mod.rs  mods.rs  profiles.rs
src/managers/: games.rs
ui/: main.slint  mod_table_view.slint
