[package]
name = "barnacle"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.2", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
compress-tools = "0.15.1"
damascus = { version = "0.0.9", default-features=false, features = ["fuse-overlayfs"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
xdg = "3.0.0"
zip = "4.3.0"
