[package]
name = "barnacle"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/poperigby/barnacle"

[dependencies]
blake3 = { version = "1.8.2", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
compress-tools = "0.15.1"
damascus = { version = "0.0.9", default-features=false, features = ["fuse-overlayfs"] }
getset = "0.1.6"
human-panic = "2.0.3"
native_db = "0.8.2"
native_model = "0.6.2"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
slint = "1.12.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
xdg = "3.0.0"
zip = "4.3.0"

[build-dependencies]
slint-build = "1.12.1"
