[workspace]
resolver = "3"
members = [
    "barnacle-gui",
    "barnacle-lib",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/poperigby/barnacle"

[workspace.lints.rust]
arithmetic_overflow = "deny"
unnecessary_transmutes = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
fallible_impl_from = "deny"
fn_params_excessive_bools = "deny"
indexing_slicing = "deny"
integer_division = "deny"
join_absolute_paths = "deny"
option_env_unwrap = "deny"
panicking_unwrap = "deny"
serde_api_misuse = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"
unchecked_duration_subtraction = "deny"
uninit_vec = "deny"
unneeded_field_pattern = "deny"
wildcard_enum_match_arm = "deny"
