[package]
name = "barnacle-data"
version.workspace = true
edition.workspace = true

[dependencies]
agdb = { version = "0.12.0", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
thiserror = "2.0.16"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.21.0"
