[package]
name = "barnacle-db"
version.workspace = true
edition.workspace = true

[dependencies]
agdb = { version = "0.12.3"}
derive_more = { version = "2.0.1", features = ["display"] }
smol = "2.0.2"
thiserror = "2.0.17"

[dev-dependencies]
macro_rules_attribute = "0.2.2"
pretty_assertions = "1.4.1"
smol-macros = "0.1.1"
tempfile = "3.23.0"
