[package]
name = "barnacle-db"
version.workspace = true
edition.workspace = true

[dependencies]
agdb = { version = "0.12.4"}
derive_more = { version = "2.0.1", features = ["display"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "fs", "macros", "test-util", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
