[package]
name = "barnacle-db"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agdb = { version = "0.12.5"}
derive_more = { version = "2.0.1", features = ["display"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
