[package]
name = "barnacle-gui"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
barnacle-lib = { path = "../barnacle-lib" }
iced = { version = "0.13.1", features = ["tokio", "svg"] }
iced_aw = {version = "0.12.2", features = ["tabs", "tab_bar", "spinner"]}
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
tokio = { version = "1.48.0", features = ["sync"] }
toml = "0.9.8"

[features]
default = ["debug"]
debug = ["iced/debug"]
