[package]
name = "barnacle-gui"
version.workspace = true
edition.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
barnacle-lib = { path = "../barnacle-lib" }
human-panic = "2.0.4"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["tokio", "svg", "advanced"] }
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.27.2"
tokio = { version = "1.48.0", features = ["sync"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["debug"]
debug = ["iced/debug"]
