[package]
name = "barnacle-lib"
version.workspace = true
edition.workspace = true

[dependencies]
barnacle-db = { path = "../barnacle-db" }
clap = { version = "4.5.41", features = ["derive"] }
compress-tools = "0.15.1"
damascus = { version = "0.0.10", default-features=false, features = ["overlayfs"] }
derive_more = { version = "2.0.1", features = ["from", "as_ref", "display"] }
getset = "0.1.6"
human-panic = "2.0.3"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
slint = "1.12.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
xdg = "3.0.0"
zip = "4.3.0"

[build-dependencies]
slint-build = "1.12.1"
