[package]
name = "barnacle-lib"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
barnacle-db = { path = "../barnacle-db" }
clap = { version = "4.5.51", features = ["derive"] }
compress-tools = "0.15.1"
damascus = { version = "0.0.10", default-features=false, features = ["overlayfs"] }
derive_more = { version = "2.0.1", features = ["from", "as_ref", "display"] }
getset = "0.1.6"
human-panic = "2.0.4"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
xdg = "3.0.0"
zip = "6.0.0"
